--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
               <!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
               <h3 class="mb-0">Anushka Sharma</h3>
               <!-- <div class="mb-1 text-muted">Nov 12</div> -->
-              <p class="card-text mb-auto">She is Managing Director of Gardensorama. she is very telented and hardworking girl. she has been awarded as a most valuable Managing Director in our field category by greenvalley magazines. she is expert in developing new things in our company services for modern choices. </p>
+              <p class="card-text mb-auto">She is the Managing Director of Gardensorama. She is very talented and hardworking girl. she has been awarded as the most valuable Managing Director in our field category by greenvalley magazines. she is expert in developing new things in our company services for modern choices. </p>
               <a href="#" class="stretched-link">anushka.sce18@gmail.com</a>
             </div>
             <!-- <div class="col-auto d-none d-lg-block">
@@ -124,7 +124,7 @@
               <!-- <strong class="d-inline-block mb-2 text-success">Design</strong> -->
               <h3 class="mb-0">Smiti Singhal</h3>
               <!-- <div class="mb-1 text-muted">Nov 11</div> -->
-              <p class="mb-auto">She is Manager of the company and also designer for some unique garden growing patterns. she is very punctual and hardworking girl. she always impresses all members and customers with her amazing work. she is very good in her work with customer satisfaction and good feedbacks. </p>
+              <p class="mb-auto">She is the Manager of the company and also designer for some unique garden growing patterns. she is very punctual and hardworking girl. she always impresses all members and customers with her amazing work. she is very good in her work with customer satisfaction and good feedbacks. </p>
               <a href="#" class="stretched-link">smiti.sce18@gmail.com</a>
             </div>
             <!-- <div class="col-auto d-none d-lg-block">
@@ -140,7 +140,7 @@
               <!-- <strong class="d-inline-block mb-2 text-primary">World</strong> -->
               <h3 class="mb-0">Dhara Ajudia</h3>
               <!-- <div class="mb-1 text-muted">Nov 12</div> -->
-              <p class="card-text mb-auto">She is Head of the Garden Maintainence department. She is punctual and very brave girl. she completes all maintainnig services in time to time whichever given to the customer by our company. no customer have complained for delaying in our Maintainence service because of her brilliant work.</p>
+              <p class="card-text mb-auto">She is the Head of the Garden Maintainence department. She is punctual and very brave girl. she completes all maintaining services in time to time whichever given to the customer by our company. no customer have complained for delaying in our Maintainence service because of her brilliant work.</p>
               <a href="#" class="stretched-link">dhara.ace18@gmail.com</a>
             </div>
             <!-- <div class="col-auto d-none d-lg-block">
