--- a/main.html
+++ b/main.html
@@ -284,18 +284,10 @@
   <div class="container text-center text-md-left">
 
     <!-- Footer links -->
-    <div class="row text-center text-md-left mt-3 pb-3">
-      <div class="col-md-1 col-lg-2 col-xl-2 mx-auto mt-3">
-        <img class="mb-2" src="logo.png" alt="..." width="120" height="120">
-      </div>
-      <!-- Grid column -->
+   
+     <!-- Grid column -->
       <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-        <h6 class="text-uppercase mb-4 font-weight-bold">Gardensorama</h6>
-        <p>Where Home meets nature</p>
-        <p>Customer satisfaction is our priotity.</p>
-        <p>Raisan</p>
-        <p>Gandhinagar</p>
-        <p>Gujarat-380056</p>
+        <img class="mb-2" src="logo.png" alt="GARDENSORAMA" width="120" height="120">
       </div>
       <!-- Grid column -->
 
